--- a/DQ Dictionary.ipynb
+++ b/DQ Dictionary.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A Couple of Dictionay Challenges"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +18,7 @@
        "{'firstname': 'Anna', 'lastname': 'Carter', 'age': 32}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +53,7 @@
        " 'Ronald Ball']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +86,7 @@
        " 'Ronald Ball']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +113,7 @@
        " 'ronald.ball@thomas.com']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +142,7 @@
        " ('Ronald Ball', 'ronald.ball@thomas.com')]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +171,7 @@
        " 'ronald.ball@thomas.com']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +193,7 @@
        "dict_values(['katherine.freeman@hoffman.net', 'tammy.gonzalez@gomez.info', 'robin.matthews@leblanc-lyons.org', 'sherry.farrell@reynolds-johnson.net', 'emma.graves@reid-little.info', 'tina.brown@yahoo.com', 'george.owens@yahoo.com', 'ronald.ball@thomas.com'])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,27 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Katherine Freeman': 'katherine.freeman@hoffman.net',\n",
-       " 'Tammy Gonzalez': 'tammy.gonzalez@gomez.info',\n",
-       " 'Robin Matthews': 'robin.matthews@leblanc-lyons.org',\n",
-       " 'Sherry Farrell': 'sherry.farrell@reynolds-johnson.net',\n",
-       " 'Emma Graves': 'emma.graves@reid-little.info',\n",
-       " 'Tina Brown': 'tina.brown@yahoo.com',\n",
-       " 'George Owens': 'george.owens@yahoo.com',\n",
-       " 'Ronald Ball': 'ronald.ball@thomas.com'}"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# map the names to emails\n",
     "my_dict1 = {}\n",
@@ -249,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +247,7 @@
        "'ogo@yahoo.com'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -430,13 +419,6 @@
     "print(laptop1)\n",
     "print(laptop2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
