--- a/DQ Dictionary.ipynb
+++ b/DQ Dictionary.ipynb
@@ -41,6 +41,109 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10: 'z', 20: 'y'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a function that swaps the keys with the values in a dictionary\n",
+    "def swap(d):\n",
+    "    return {value:key for key, value in d.items()}\n",
+    "\n",
+    "print(swap({\"z\": 10, \"y\": 20}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''create a function, default, that given a dictionary, a potential key and an object, returns the value for that \n",
+    "key if the key is in the dictionary, otherwise returns the given object.'''\n",
+    "\n",
+    "def default(d, key, default_value):\n",
+    "    return d.get(key, default_value)\n",
+    "\n",
+    "in_dict = default({\"z\": 10, \"y\": 20}, 'z', -1)\n",
+    "not_in_dict = default({\"z\": 10, \"y\": 20}, 'h', -1)\n",
+    "print(in_dict)\n",
+    "print(not_in_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n",
+      "{0: 'I', 1: 'love', 2: 'Python'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''create a function, default_add, that given a dictionary, a potential key and an object, returns the \n",
+    "value for that key. If the key isn't in the dictionary, sets they key to the given object.'''\n",
+    "\n",
+    "def default_add(d, key, default_value):\n",
+    "    return d.setdefault(key, default_value)\n",
+    "\n",
+    "some_d = {0:\"I\", 1:\"love\"}\n",
+    "print(default_add(some_d, 2, \"Python\"))\n",
+    "print(some_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chuks\n",
+      "{0: 'I', 1: 'love', 2: 'Python'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''create a function, remove, that given a dictionary and a key, it removes that key from the dictionary and \n",
+    "returns the corresponding value. If the key isn't in the dictionary, it returns None'''\n",
+    "\n",
+    "def remove(d, key):\n",
+    "    try:\n",
+    "        return d.pop(key)\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "some_d = {0: 'I', 1: 'love', 2: 'Python', 3: 'chuks'}\n",
+    "print(remove(some_d, 3))\n",
+    "print(some_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "['Katherine Freeman',\n",
@@ -53,7 +156,7 @@
        " 'Ronald Ball']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +189,7 @@
        " 'Ronald Ball']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +216,7 @@
        " 'ronald.ball@thomas.com']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +245,7 @@
        " ('Ronald Ball', 'ronald.ball@thomas.com')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +274,7 @@
        " 'ronald.ball@thomas.com']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +296,7 @@
        "dict_values(['katherine.freeman@hoffman.net', 'tammy.gonzalez@gomez.info', 'robin.matthews@leblanc-lyons.org', 'sherry.farrell@reynolds-johnson.net', 'emma.graves@reid-little.info', 'tina.brown@yahoo.com', 'george.owens@yahoo.com', 'ronald.ball@thomas.com'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,15 +321,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Katherine Freeman': 'katherine.freeman@hoffman.net',\n",
+       " 'Tammy Gonzalez': 'tammy.gonzalez@gomez.info',\n",
+       " 'Robin Matthews': 'robin.matthews@leblanc-lyons.org',\n",
+       " 'Sherry Farrell': 'sherry.farrell@reynolds-johnson.net',\n",
+       " 'Emma Graves': 'emma.graves@reid-little.info',\n",
+       " 'Tina Brown': 'tina.brown@yahoo.com',\n",
+       " 'George Owens': 'george.owens@yahoo.com',\n",
+       " 'Ronald Ball': 'ronald.ball@thomas.com'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# map the names to emails\n",
     "my_dict1 = {}\n",
     "for i in range(len(keys)):\n",
     "    my_dict1[keys[i]] = values[i]\n",
     "\n",
+    "my_dict1\n",
     "# Alternative answer 1\n",
     "#my_dict2 = {keys[i]: values[i] for i in range(len(keys))}\n",
     "#my_dict2\n",
@@ -238,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +369,7 @@
        "'ogo@yahoo.com'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -418,6 +540,59 @@
     "# print the solution\n",
     "print(laptop1)\n",
     "print(laptop2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Female': [19.705, 2.245, 2.0], 'Male': [23.24, 2.373333333333333, 2.6666666666666665]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''create a function, avg_group, that given a dictionary that follows the schema {column_name: {index: value}} and a \n",
+    "column name, returns a new dictionary where they keys are the values in the given column name, and the values are the\n",
+    "averages of total_bill, tip and size'''\n",
+    "\n",
+    "d = {\n",
+    "    'total_bill': {69: 15.01, 103: 22.42, 84: 15.98, 207: 38.73, 0: 16.99},\n",
+    "    'tip': {69: 2.09, 103: 3.48, 84: 2.03, 207: 3.0, 0: 1.01},\n",
+    "    'sex': {69: 'Male', 103: 'Female', 84: 'Male', 207: 'Male', 0: 'Female'},\n",
+    "    'smoker': {69: 'Yes', 103: 'Yes', 84: 'No', 207: 'Yes', 0: 'No'},\n",
+    "    'day': {69: 'Sat', 103: 'Sat', 84: 'Thur', 207: 'Sat', 0: 'Sun'},\n",
+    "    'time': {69: 'Dinner', 103: 'Dinner',\n",
+    "             84: 'Lunch', 207: 'Dinner', 0: 'Dinner'},\n",
+    "    'size': {69: 2, 103: 2, 84: 2, 207: 4, 0: 2}\n",
+    "}\n",
+    "\n",
+    "def get_avgs(d, value, indices):\n",
+    "    sums = [0 for _ in range(3)]\n",
+    "    for idx in indices:\n",
+    "        sums[0] += d[\"total_bill\"][idx]\n",
+    "        sums[1] += d[\"tip\"][idx]\n",
+    "        sums[2] += d[\"size\"][idx]\n",
+    "    return list(map(lambda x: x/len(indices), sums))\n",
+    "\n",
+    "def avg_group(d, col):\n",
+    "    data = d[col]\n",
+    "    groups = list(set(d[col].values()))\n",
+    "    groups.sort()\n",
+    "    \n",
+    "    group_by = {}\n",
+    "    \n",
+    "    for key in groups:\n",
+    "        indices = [k for k,v in d[col].items() if v == key]\n",
+    "        group_by[key] = get_avgs(d, key, indices)\n",
+    "            \n",
+    "    return group_by\n",
+    "\n",
+    "print(avg_group(d, \"sex\"))"
    ]
   }
  ],
